crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlapswithscopedsymbols.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "if",
                  "type": "text"
                }
              ],
              "raw_text": "if",
              "span": {
                "end": 156,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "span": {
                "end": 159,
                "start": 157
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "have",
                  "type": "text"
                }
              ],
              "raw_text": "have",
              "span": {
                "end": 164,
                "start": 160
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "some",
                        "type": "text"
                      }
                    ],
                    "raw_text": "some",
                    "span": {
                      "end": 170,
                      "start": 166
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "time",
                        "type": "text"
                      }
                    ],
                    "raw_text": "time",
                    "span": {
                      "end": 175,
                      "start": 171
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "span": {
                "end": 183,
                "start": 181
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "can",
                  "type": "text"
                }
              ],
              "raw_text": "can",
              "span": {
                "end": 187,
                "start": 184
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "span": {
                "end": 191,
                "start": 188
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "tickets",
                        "type": "text"
                      }
                    ],
                    "raw_text": "tickets",
                    "span": {
                      "end": 200,
                      "start": 193
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "to",
                        "type": "text"
                      }
                    ],
                    "raw_text": "to",
                    "span": {
                      "end": 203,
                      "start": 201
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 212,
                "start": 209
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "opera",
                  "type": "text"
                }
              ],
              "raw_text": "opera",
              "span": {
                "end": 218,
                "start": 213
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "start",
                        "type": "text"
                      }
                    ],
                    "raw_text": "start",
                    "span": {
                      "end": 233,
                      "start": 228
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "overlap",
                        "type": "text"
                      }
                    ],
                    "raw_text": "overlap",
                    "span": {
                      "end": 241,
                      "start": 234
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "and",
                        "type": "text"
                      }
                    ],
                    "raw_text": "and",
                    "span": {
                      "end": 245,
                      "start": 242
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "retrace",
                        "type": "text"
                      }
                    ],
                    "raw_text": "retrace",
                    "span": {
                      "end": 253,
                      "start": 246
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                },
                {
                  "type": "partialretracing"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "rest",
                  "type": "text"
                }
              ],
              "raw_text": "rest",
              "span": {
                "end": 267,
                "start": 263
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "of",
                  "type": "text"
                }
              ],
              "raw_text": "of",
              "span": {
                "end": 270,
                "start": 268
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "retrace",
                  "type": "text"
                }
              ],
              "raw_text": "retrace",
              "span": {
                "end": 278,
                "start": 271
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "honey",
                        "type": "text"
                      }
                    ],
                    "raw_text": "honey",
                    "span": {
                      "end": 293,
                      "start": 288
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "we",
                        "type": "text"
                      }
                    ],
                    "raw_text": "we",
                    "span": {
                      "end": 296,
                      "start": 294
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "need",
                        "type": "text"
                      }
                    ],
                    "raw_text": "need",
                    "span": {
                      "end": 301,
                      "start": 297
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "span": {
                "end": 309,
                "start": 307
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "go",
                  "type": "text"
                }
              ],
              "raw_text": "go",
              "span": {
                "end": 312,
                "start": 310
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
