crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__participants-duplicate-role.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Mei-Oanh",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Beatrice_Teacher's_Aide",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "890",
            "role": "Target_Child",
            "speaker_code": "678"
          },
          {
            "name": null,
            "role": "Speaker",
            "speaker_code": "FOO"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "678",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Speaker",
        "speaker": "FOO",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Test participants line with duplicate roles.",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 367,
                "start": 364
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "man",
                  "type": "text"
                }
              ],
              "raw_text": "man",
              "span": {
                "end": 371,
                "start": 368
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 376,
                "start": 372
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 379,
                "start": 377
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 383,
                "start": 380
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "world",
                  "type": "text"
                }
              ],
              "raw_text": "world",
              "span": {
                "end": 389,
                "start": 384
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "isn't",
                  "type": "text"
                }
              ],
              "raw_text": "isn't",
              "span": {
                "end": 395,
                "start": 390
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 400,
                "start": 396
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "test",
                  "type": "text"
                }
              ],
              "raw_text": "test",
              "span": {
                "end": 413,
                "start": 409
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "numeric",
                  "type": "text"
                }
              ],
              "raw_text": "numeric",
              "span": {
                "end": 421,
                "start": 414
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "speaker",
                  "type": "text"
                }
              ],
              "raw_text": "speaker",
              "span": {
                "end": 429,
                "start": 422
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "id",
                  "type": "text"
                }
              ],
              "raw_text": "id",
              "span": {
                "end": 432,
                "start": 430
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "678"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "678": {
      "birth_date": null,
      "code": "678",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "678"
      },
      "name": "890",
      "role": "Target_Child"
    },
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": "Mei-Oanh",
      "role": "Target_Child"
    },
    "FOO": {
      "birth_date": null,
      "code": "FOO",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Speaker",
        "speaker": "FOO"
      },
      "name": null,
      "role": "Speaker"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Beatrice_Teacher's_Aide",
      "role": "Mother"
    }
  }
}
