crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__participants-unused.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Father",
            "speaker_code": "F_A'-T"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Father",
        "speaker": "F_A'-T",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "28-JUN-2001",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "participant": "MOT",
        "place": "Taipei, Taiwan",
        "type": "birthplace"
      },
      "line_type": "header"
    },
    {
      "header": {
        "language": "ara",
        "participant": "F_A'-T",
        "type": "l1_of"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "CHI, F_A'-T not used",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 322,
                "start": 319
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "woman",
                  "type": "text"
                }
              ],
              "raw_text": "woman",
              "span": {
                "end": 328,
                "start": 323
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 333,
                "start": 329
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 336,
                "start": 334
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 340,
                "start": 337
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "universe",
                  "type": "text"
                }
              ],
              "raw_text": "universe",
              "span": {
                "end": 349,
                "start": 341
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 352,
                "start": 350
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 355,
                "start": 353
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 360,
                "start": 356
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "fé",
                  "type": "text"
                }
              ],
              "raw_text": "fé",
              "span": {
                "end": 364,
                "start": 361
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "28-JUN-2001",
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "F_A'-T": {
      "birth_date": null,
      "code": "F_A'-T",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Father",
        "speaker": "F_A'-T"
      },
      "name": null,
      "role": "Father"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
